Included the s3 bucket storage configuration.

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,9 @@
 [core]
     analytics = false
-    remote = remote_storage
+    remote = s3_remote
 ['remote "remote_storage"']
     url = /home/shamik/Data/dvc_remote/
+['remote "s3_remote"']
+    url = s3://summ-models/dvc/
+    access_key_id = None
+    secret_access_key = None
